# homework_python_basic

./: README.md  requirements.txt
.github/workflows/: django.yml  pylint.yml  run-tests  run-tests.yml
homework_01/: main.py
homework_02/: README.md  base.py  car.py  func.py  plane.py
homework_03/: Dockerfile  pyproject.toml
homework_03/web-app/: database.py  main.py
homework_04/: data.py  docker-compose.yaml  jsonplaceholder_requests.py  main.py  models.py  requirements.txt
homework_05/: app.py
homework_05/templates/: base.html  book.html  index.html
homework_06/: docker-compose.yaml  main.py  requirements.txt
homework_06/models/: __init__.py  book.py
homework_06/templates/: base.html  index.html
homework_06/templates/book/: add.html  details.html  list.html
homework_06/templates/books/: confirm-delete.html  details.html  list.html
homework_06/views/: book.py  books.py
homework_06/views/forms/: book.py
homework_07/: README.md
homework_07/boardgameshop/boardgames/: admin.py  models.py  urls.py  views.py
homework_07/boardgameshop/boardgames/migrations/: 0002_boardgameage_alter_boardgame_min_age_of_player.py  0003_alter_boardgame_min_age_of_player.py
homework_07/boardgameshop/boardgames/templates/boardgames/: base.html
homework_07/boardgameshop/boardgameshop/: settings.py  urls.py
homework_08/boardgameshop/boardgames/: views.py
homework_08/boardgameshop/boardgames/templates/boardgames/: base.html
homework_08/boardgameshop/boardgameshop/: urls.py
testing/test_homework_10/: conftest.py
